@@ -5,15 +5,15 @@
     <ProjectGuid>{0e0f08e8-bdad-45b1-af61-3f5d7661fc16}</ProjectGuid>
     <Name>Unique Unit Lines</Name>
     <Guid>f9d1f547-168f-40a4-93b7-2a0adc9967b9</Guid>
-    <ModVersion>1</ModVersion>
+    <ModVersion>2</ModVersion>
     <Stability>Stable</Stability>
     <Teaser>
     [ICON_BULLET]Applies unique promotions from a unique unit to the whole unit line for the civilization.
-    [NEWLINE][ICON_BULLET]Requires the [COLOR_HIGHLIGHT_TEXT]Community Patch[ENDCOLOR] or [COLOR_HIGHLIGHT_TEXT]WHoward's DLL[ENDCOLOR].
+    [NEWLINE][ICON_BULLET]Requires the [COLOR_POSITIVE_TEXT]17/04/20[ENDCOLOR] version or newer of [COLOR_POSITIVE_TEXT]Community Patch[ENDCOLOR].
     </Teaser>
     <Description>
     [ICON_BULLET]Applies unique promotions from a unique unit to the whole unit line for the civilization.
-    [NEWLINE][ICON_BULLET]Requires the [COLOR_HIGHLIGHT_TEXT]Community Patch[ENDCOLOR] or [COLOR_HIGHLIGHT_TEXT]WHoward's DLL[ENDCOLOR].
+    [NEWLINE][ICON_BULLET]Requires the [COLOR_POSITIVE_TEXT]17/04/20[ENDCOLOR] version or newer of [COLOR_POSITIVE_TEXT]Community Patch[ENDCOLOR].
     </Description>
     <Authors>HungryForFood</Authors>
     <SpecialThanks>
